# npm-repository-prototype

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  package.rs  user.rs
src/models/: login.rs  mod.rs  package.rs  registry.rs  version.rs
test-package/: .npmrc  index.js  package.json
