[package]
name = "npm-repository-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
axum = "0.7.7"
axum-macros = "0.4.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4"] }
sha2 = "0.10.8"
